--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -1,4 +1,4 @@
-body {
+    body {
     font-family: 'Roboto', Arial, sans-serif;
     font-size: 16px;
     min-width: 600px;
@@ -81,6 +81,10 @@ body {
                     align-items: center;
                     font-size: 1.5rem;
                     flex-direction: row;
+                    a {
+                        text-decoration: none;
+                        color: #fff;
+                    }
                 }
             }
         }
@@ -485,4 +489,4 @@ body {
             margin-bottom: 20px;
         }
     }
-}
+    // }
