add burger icon

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,4 @@
-@import 'modules/variables';
+@import 'partials/variables';
 // @import 'modules/mixins';
 @import 'partials/grid';
 @import 'partials/base';
