--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -1,21 +1,19 @@
 body {
     font-family: 'Roboto', Arial, sans-serif;
     font-size: 16px;
-    min-width: 600px;
     font-weight: 300;
-    color: #fff; // color: rgb(13, 3, 72);
+    color: #fff;
 }
 /*---------------------------------------*/
 /*     MAIN SECTION                      */
 /*---------------------------------------*/
 
 %bfr_aftr {
-    position: absolute;
     content: '';
     height: 7px;
     width: 47px;
     border-radius: 3px;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: $color6;
 }
 
 .section-main {
@@ -35,8 +33,8 @@ body {
             height: 75px;
             top: 20px;
             flex-direction: row;
-            background-color: rgba(13, 3, 72, 0.7);
-            color: rgb(255, 255, 255);
+            background-color: $color1_opc70;
+            color: $color6;
             .main-logo {
                 height: 75px;
                 display: flex;
@@ -53,33 +51,27 @@ body {
                     justify-content: flex-end;
                 }
                 .burger {
-                    display: inline-block;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
                     padding: 0px;
-                    height: 7px;
-                    border-radius: 7px;
+                    height: 43px;
                     width: 47px;
-                    margin: 34px 10px;
+                    margin: 16px 10px;
                     position: relative;
-                    background-color: rgba(255, 255, 255, 1);
                     @media (min-width: 760px) {
                         display: none;
                     }
-                    &:before {
+                    .burger-bar {
                         @extend %bfr_aftr;
-                        top: -16px;
-                    }
-                    &:after {
-                        @extend %bfr_aftr;
-                        bottom: -16px;
                     }
                 }
                 .menu-list {
                     display: none;
                     @media (min-width: 760px) {
-                        flex-direction: row;
                         display: flex;
+                        flex-direction: row;
                         font-size: 1rem;
-                        // justify-content: space-between;
                         padding-right: 20px;
                     }
                     ul {
@@ -92,7 +84,7 @@ body {
                             justify-content: space-between;
                             display: inline-block;
                             height: 75px;
-                            padding: 20px 0px;
+                            padding: 0px 0px;
                             &:hover {
                                 background-color: rgba(255, 255, 255, 0.25);
                                 cursor: pointer;
@@ -100,9 +92,9 @@ body {
                             a {
                                 display: inline-block;
                                 font-size: 1rem;
-                                color: rgb(255, 255, 255);
+                                color: $color6;
                                 line-height: 1rem;
-                                padding: 10px 15px;
+                                padding: 30px 15px;
                                 text-decoration: none;
                                 border-right: 1px solid white;
                             }
@@ -117,7 +109,7 @@ body {
                     ul {
                         flex-direction: column;
                         align-items: left;
-                        background-color: rgba(13, 3, 72, 0.7);
+                        background-color: $color1_opc70;
                         li {
                             flex-direction: row;
                             align-items: center;
@@ -132,12 +124,12 @@ body {
                             a {
                                 display: inline-block;
                                 font-size: 1rem;
-                                color: rgb(255, 255, 255);
+                                color: $color6;
                                 line-height: 1rem;
                                 padding: 12px 10px;
                                 text-decoration: none;
                                 border: none;
-                                width:125px;
+                                max-width:125px;
                             }
                         }
                     }
@@ -150,7 +142,7 @@ body {
                         text-decoration: none;
                         color: #fff;
                         text-align: center;
-                        padding-left: 15px;
+                        padding: 15px 0px 15px 15px;
                     }
                 }
             }
@@ -159,30 +151,30 @@ body {
             padding-top: 160px;
             .main-header {
                 text-align: right;
-                color: rgba(13, 3, 72, 0.7);
+                color: $color1_opc70;
                 font-size: 2.5rem;
                 width: 100%;
-                border-bottom: 2px solid rgba(13, 3, 72, 0.7);
+                border-bottom: 2px solid $color1_opc70;
                 margin-bottom: 1rem;
             }
             .main-description {
                 .main-description-paragraph {
                     text-align: left;
-                    color: rgba(13, 3, 72, 0.7);
+                    color: $color1_opc70;
                     font-size: 1.75rem;
                     line-height: 2rem;
                 }
                 .main-description-button {
                     text-align: center;
-                    color: #fff;
-                    background-color: rgba(13, 3, 72, 0.7);
+                    color: $color6;
+                    background-color: $color1_opc70;
                     border-radius: 5px;
                     margin: 10px 0px;
                     padding: 5px 10px;
                     border: none;
                     a {
                         text-decoration: none;
-                        color: #fff;
+                        color: $color6;
                     }
                 }
             }
@@ -199,17 +191,17 @@ body {
     display: flex;
     width: 100%;
     margin: 37px 0px;
-    color: rgb(13, 3, 72);
+    color: $color1;
     .calculator {
         .calculator-title-box {
             display: flex;
             width: 100%;
             height: 35px;
-            color: rgb(255, 255, 255);
+            color: $color6;
             font-size: 1.5rem;
             justify-content: center;
             align-items: center;
-            background-color: rgb(13, 3, 72);
+            background-color: $color1;
             border-radius: 10px;
         }
         .calculator-text {
@@ -238,8 +230,8 @@ body {
             width: 100%;
             height: 32px;
             margin-top: 5px;
-            color: #fff;
-            background-color: rgb(13, 3, 72);
+            color: $color6;
+            background-color: $color1;
             text-align: left;
             border-radius: 5px;
             margin-bottom: 0.5rem;
@@ -274,8 +266,8 @@ body {
             font-size: 1.75rem;
             font-weight: 300;
             text-align: center;
-            color: #fff;
-            background-color: rgba(13, 3, 72, 0.65);
+            color: $color6;
+            background-color: $color3;
             margin-left: -5px;
             @media (min-width: 721px) {
                 margin-left: 10px;
@@ -289,7 +281,7 @@ body {
                     font-size: 2rem;
                     line-height: 1.7rem;
                     font-weight: 300;
-                    border-right: 1px solid rgb(255, 255, 255);
+                    border-right: 1px solid $color6;
                     padding: 10px 0px;
                     .realisation-time {
                         font-size: 1rem;
@@ -298,7 +290,7 @@ body {
             }
             .pricing-table-row-transl {
                 display: flex;
-                background-color: rgba(13, 3, 72, 0.3);
+                background-color: $color2;
                 align-content: center;
                 height: 100%;
                 .pricing-table-transl-cell {
@@ -306,39 +298,39 @@ body {
                     font-weight: 300;
                     font-size: 1.25rem;
                     align-content: center;
-                    border-right: 1px solid rgb(255, 255, 255);
+                    border-right: 1px solid $color6;
                     padding: 10px 0px;
                 }
             }
             .pricing-table-row-redact-lang {
                 display: flex;
-                align-content: center; // height: 75px;
+                align-content: center;
                 .pricing-table-redact-cell {
                     height: 75px;
                     align-content: center;
                     font-weight: 300;
                     font-size: 1.25rem;
-                    border-right: 1px solid rgb(255, 255, 255);
+                    border-right: 1px solid $color6;
                     padding: 10px 0px;
                 }
             }
             .pricing-table-row-redact-merit {
                 display: flex;
-                background-color: rgba(13, 3, 72, 0.3);
-                align-content: center; // height: 100%;
+                background-color: $color2;
+                align-content: center;
                 .pricing-table-merit-cell {
                     height: 75px;
                     font-weight: 300;
                     font-size: 1.25rem;
                     align-items: center;
-                    border-right: 1px solid rgb(255, 255, 255);
+                    border-right: 1px solid $color6;
                     padding: 10px 0px;
                 }
             }
         }
         .hover {
             &:hover {
-                background-color: rgba(13, 3, 72, 0.75);
+                background-color: $color1;
                 font-size: 4rem;
             }
         }
@@ -364,11 +356,11 @@ body {
                 margin: 10px 0px;
             }
             .chosen {
-                background-color: rgba(13, 3, 72, 0.75);
+                background-color: $color1;
                 height: 75px;
                 width: 100%;
                 margin-top: 17px;
-                color: rgb(255, 255, 255);
+                color: $color6;
                 display: flex;
                 border-radius: 10px;
                 .chosen-title,
@@ -377,11 +369,15 @@ body {
                 .chosen-price {
                     width: 100%;
                     height: 100%;
-                    font-size: 1.25rem;
                     font-weight: 300;
                     text-align: center;
-                    border-right: 1px solid rgb(255, 255, 255);
+                    border-right: 1px solid $color6;
                     padding: 10px 7px;
+                    font-size: 1rem;
+                    @media (min-width: 620px) {
+                        font-size: 1.25rem;
+                        padding: 5px 4px;
+                    }
                 }
                 .chosen-service {
                     padding-top: 4px;
@@ -425,14 +421,14 @@ body {
                 text-align: center;
                 margin-top: 1rem;
                 margin-bottom: -1rem;
-                color: #d00;
+                color: #c00;
                 font-weight: 500;
             }
             .order-button {
                 width: 100%;
                 height: 50px;
                 background-color: rgba(13, 3, 72, 0.75);
-                color: rgb(255, 255, 255);
+                color: $color6;
                 font-size: 2rem;
                 text-align: center;
                 justify-content: center;
@@ -441,17 +437,16 @@ body {
                 margin: 25px 0px;
                 padding: 5px 0px;
                 &:hover {
-                    background-color: rgba(13, 3, 72, 0.85);
+                    background-color: $color1-opc70;
                     cursor: pointer;
-                    box-shadow: 2px 2px 1px 2px rgba(13, 3, 72, 0.25)
+                    box-shadow: 2px 2px 1px 2px $color1-opc25;
                 }
                 &:disabled {
-                    background: rgba(13, 3, 72, 0.25);
+                    background-color: $color1-opc25;
                     color: #d77;
                     &:hover {
                         cursor: not-allowed;
                         box-shadow: none;
-                        background: rgba(13, 3, 2, 0.25);
                     }
                 }
             }
@@ -464,35 +459,32 @@ body {
         .invoice-page {
             display: flex;
             flex-direction: row;
-            border: 1px solid rgb(13, 3, 72);
-            width: 100%;
-            font-size: 2vw;
-            height: 120vw;
-            @media (max-width: 620px) {
-                font-size: 12px;
-            }
+            background-color: $color1_opc25;
+            border: 1px solid $color1;
+            font-size: 12px;
+            width: 210mm;
+            height: 297mm;
             .margin {
-                padding: 6vw;
+                padding: 30px;
             }
             b {
                 font-weight: 500;
             }
             .invoice-header {
-                background-color: rgba(13, 3, 72, 0.25);
+                width: 100%;
             }
             .invoice-main {
-                height: 85vw;
+                height: 50mm;
+                background-color: $color6;
                 .client-data,
                 .service-data,
                 .service-prices {
                     height: 260px;
-                    padding: 0.5rem;
-                    line-height: 2rem;
-                    border: 1px solid #000;
+                    padding: 10px;
+                    line-height: 24px;
                 }
             }
             .invoice-footer {
-                background-color: rgba(13, 3, 72, 0.25);
                 text-align: center;
                 align-self: flex-end;
             }
@@ -505,8 +497,8 @@ body {
 // -----------------------------
 .section-about-us {
     display: flex;
-    background-color: rgba(13, 3, 72, 0.7);
-    color: #fff;
+    background-color: $color1_opc70;
+    color: $color6;
     padding-bottom: 25px; 
     width: 100%;
     .section-about-us-header {
@@ -515,7 +507,7 @@ body {
             font-size: 2rem;
             font-weight: 300;
             width: 100%;
-            border-bottom: 1px solid #fff;
+            border-bottom: 1px solid $color6;
         }
     }
     .section-about-us-main-text {
@@ -539,22 +531,22 @@ body {
 // -----------------------------
 .section-credentials {
     display: flex;
-    background-color: #fff;
-    color: rgb(13, 3, 72);
+    background-color: $color6;
+    color: $color1;
     margin: 15px 0px;
     .section-credentials-header {
         .section-credentials-header-text {
-            color: rgb(13, 3, 72);
+            color: $color1;
             margin-bottom: 20px;
             font-size: 2rem;
             font-weight: 300;
             width: 100%;
-            border-bottom: 1px solid rgb(13, 3, 72);
+            border-bottom: 1px solid $color1;
         }
     }
     .section-credentials-main-text {
         .quote {
-            color: rgb(13, 3, 72);
+            color: $color1;
             font-size: 1.25rem;
             font-weight: 300;
             text-align: center;
@@ -573,8 +565,8 @@ body {
 // -----------------------------
 .section-partners {
     display: flex;            
-    background-color: #fff;
-    color: rgb(13, 3, 72);
+    background-color: $color6;
+    color: $color1;
     height: 100%;
     .section-partners-header {
         .section-partners-header-text {
@@ -582,7 +574,7 @@ body {
             font-size: 2rem;
             font-weight: 300;
             width: 100%;
-            border-bottom: 1px solid rgb(13, 3, 72);
+            border-bottom: 1px solid $color1;
         }
     }
     .section-partners-main-text {
@@ -594,7 +586,7 @@ body {
     .partners-image {
         height: 160px;
         width: 100%;
-        box-shadow: 1px 1px 2px 1px #fff;
+        box-shadow: 1px 1px 2px 1px $color6;
     }
 }
 
@@ -603,23 +595,23 @@ body {
 // -----------------------------
 .section-contact {
     display: flex;
-    background-color: rgba(13, 3, 72, 0.7);
-    color: #fff;
+    background-color: $color1_opc70;
+    color: $color6;
     padding: 25px 0px 75px 0px;
     // margin: 15px 0px;
     .section-contact-header {
         // margin: 25px 0px;
         .section-contact-header-text {
-            color: #fff;
+            color: $color6;
             margin-bottom: 20px;
             font-size: 2rem;
             font-weight: 300;
-            border-bottom: 1px solid #fff;
+            border-bottom: 1px solid $color6;
             width: 100%;
         }
     }
     .section-contact-main-text {
-        color: #fff;
+        color: $color6;
         font-size: 1rem;
         font-weight: 300;
         text-align: left;
@@ -629,7 +621,7 @@ body {
         }
         a {
             text-decoration: none;
-            color: #fff;
+            color: $color6;
             span {
                 font-weight: 500;
             }
