update invoice create and save

--- a/src/sass/partials/_grid.scss
+++ b/src/sass/partials/_grid.scss
@@ -8,18 +8,14 @@
 
 .container {
     width: 100%;
-    // margin: 0 1rem;
     max-width: 800px;
     @media (min-width: $tabletWidth) {
         max-width: 1000px;
-        // margin: 0 1rem;
     }
     @media (min-width: $desktopWidth) {
-        // max-width: 1000px;
         margin: 0 auto;
     }
     .row {
-        // padding-bottom: 2rem;
         &:before,
         &:after {
             clear: both;
@@ -38,7 +34,7 @@
                 width: ($singleColumnWidth * $i);
             }
         }
-        @media (min-width: 760px) {
+        @media (min-width: $tabletWidth) {
             @for $i from 1 through $columns {
                 .col-md-#{$i} {
                     width: ($singleColumnWidth * $i);
