--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -59,7 +59,7 @@ body {
                     width: 47px;
                     margin: 16px 10px;
                     position: relative;
-                    @media (min-width: 760px) {
+                    @media (min-width: $tabletWidth) {
                         display: none;
                     }
                     .burger-bar {
@@ -68,16 +68,17 @@ body {
                 }
                 .menu-list {
                     display: none;
-                    @media (min-width: 760px) {
+                    @media (min-width: $tabletWidth) {
                         display: flex;
                         flex-direction: row;
                         font-size: 1rem;
-                        padding-right: 20px;
                     }
                     ul {
                         justify-content: space-between;
                         align-items: center;
                         padding-rigth: 20px;
+                        border-left: 1px solid white;
+                        
                         li {
                             flex-direction: row;
                             align-items: center;
@@ -142,7 +143,7 @@ body {
                         text-decoration: none;
                         color: #fff;
                         text-align: center;
-                        padding: 15px 0px 15px 15px;
+                        padding: 15px 0px 15px 30px;
                     }
                 }
             }
@@ -278,8 +279,8 @@ body {
                 height: 75px;
                 .pricing-table-headers {
                     height: 75px;
-                    font-size: 2rem;
-                    line-height: 1.7rem;
+                    font-size: 1.75rem;
+                    line-height: 1.5rem;
                     font-weight: 300;
                     border-right: 1px solid $color6;
                     padding: 10px 0px;
@@ -290,7 +291,7 @@ body {
             }
             .pricing-table-row-transl {
                 display: flex;
-                background-color: $color2;
+                background-color: $color1-opc25;
                 align-content: center;
                 height: 100%;
                 .pricing-table-transl-cell {
@@ -305,6 +306,7 @@ body {
             .pricing-table-row-redact-lang {
                 display: flex;
                 align-content: center;
+                background-color: $color1-opc45;
                 .pricing-table-redact-cell {
                     height: 75px;
                     align-content: center;
@@ -316,7 +318,7 @@ body {
             }
             .pricing-table-row-redact-merit {
                 display: flex;
-                background-color: $color2;
+                background-color: $color1-opc65;
                 align-content: center;
                 .pricing-table-merit-cell {
                     height: 75px;
@@ -497,7 +499,7 @@ body {
 // -----------------------------
 .section-about-us {
     display: flex;
-    background-color: $color1_opc70;
+    background-color: $color1;
     color: $color6;
     padding-bottom: 25px; 
     width: 100%;
@@ -595,17 +597,15 @@ body {
 // -----------------------------
 .section-contact {
     display: flex;
-    background-color: $color1_opc70;
+    background-color: $color1;
     color: $color6;
     padding: 25px 0px 75px 0px;
-    // margin: 15px 0px;
+    font-weight: 300;
     .section-contact-header {
-        // margin: 25px 0px;
         .section-contact-header-text {
             color: $color6;
             margin-bottom: 20px;
             font-size: 2rem;
-            font-weight: 300;
             border-bottom: 1px solid $color6;
             width: 100%;
         }
@@ -613,7 +613,6 @@ body {
     .section-contact-main-text {
         color: $color6;
         font-size: 1rem;
-        font-weight: 300;
         text-align: left;
         margin-bottom: 1rem;
         .copy {
@@ -623,7 +622,8 @@ body {
             text-decoration: none;
             color: $color6;
             span {
-                font-weight: 500;
+                font-weight: 300;
+                text-decoration: underline;
             }
         }
         .company {
