--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -1,13 +1,18 @@
 // COLORS
 $color1: rgba(57, 57, 168, 1);
-$color1-opc70: rgba(57, 57, 168, 0.7);
 $color1-opc25: rgba(57, 57, 168, 0.25);
-$color2: rgba(156, 60, 144, 1);
+$color1-opc45: rgba(57, 57, 168, 0.55);
+$color1-opc65: rgba(57, 57, 168, 0.65);
+$color1-opc70: rgba(57, 57, 168, 0.7);
+$color2: rgba(57, 57, 168, 0.7);
+$color3: rgba(57, 57, 168, 0.6);
+$color4: rgba(156, 60, 144, 1);
 $color2-opc25: rgba(156, 60, 144, 0.25);
-$color3: rgba(123, 60, 178, 1);
-$color3-opc70: rgba(123, 60, 178, 0.7);
-$color4: rgba(168, 89, 53, 1);
-$color5: rgba(178, 64, 60, 1);
+// $color3: rgba(123, 60, 178, 1);
+// $color3: rgba(57, 57, 168, 1);
+
+$color5: rgba(168, 89, 53, 1);
+// $color3: rgba(178, 64, 60, 1);
 $color6: #ffffff;
 
 
